# abfahrtstafel

./: .gitignore  README.md  flake.nix  package.nix  pyproject.toml  waveshare-epd.nix  waveshare-epd.patch
app/: package.nix  pyproject.toml
app/src/tnf_abfahrtstafel/: __init__.py  epaper.py  linzag.py  ooevv.py  render.py
mechanical/display-case/: Abfahrtstafel Basis.par  Abfahrtstafel.3mf  Abfahrtstafel.asm  Abfahrtstafel.cfg  Abfartstafel Deckel.par
nix-support/: gpiozero.patch  waveshare-epd.nix
os/: configuration.nix  spi.nix  usb_otg.nix
os/secrets/: wifi.age
src/tnf_abfahrtstafel/: __init__.py  linzag.py  render.py
